[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "range_ops"
version = "0.0.3"
authors = [
  { name="Tom Shaw", email="tomshaw.work@gmail.com" },
]
description = "simplify combining and comparing contiguous ranges of int/floats"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas",
  "uuid",
]
[project.urls]
Homepage=https://github.com/teshaw/ranger_ops
Issues=https://github.com/teshaw/ranger_ops/issues
Wiki=https://github.com/teshaw/ranger_ops/wiki
